fixes tooltip overflow

--- a/ui/screens/tooltip/modules/tooltip_module.css
+++ b/ui/screens/tooltip/modules/tooltip_module.css
@@ -33,7 +33,7 @@
     width: 30.0rem;
 
     background-image: url("coui://gfx/ui/skin/tooltip_315_bottom.png");
-    background-size: 31.5rem 55.3rem;
+    background-size: 31.5rem 85.3rem;
     background-position: bottom;
 }
 
